2007-07-19  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  When a component reconnects that is already happy, clear
	  moodPending. It probably turned happy while it was disconnected.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feed.py:
	  Call up to the right superclass.

	* flumotion/manager/component.py:
	  When looking for other components to connect feeders to, only
	  consider components that are fully logged in (i.e. where 
	  componentAvatar.componentState != None).

	  Fixes #699 - components going sad when starting multiple components
	  at the same time.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/component.py:
	  Import twisted.internet.error as terror, use terror where there's a
	  local function called error.

	* flumotion/manager/depgraph.py:
	  Add a comment.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/depgraph.py:
	  Add some comments, simplify a bit of code.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_manager_depgraph.py:
	* flumotion/test/test_manager_manager.py:
	  Fix up testsuite for depgraph changes.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/depgraph.py:
	  Remove Feeder, Eater classes, which are unused.
	  Make state dict contain a callable as well as a boolean for each DAG
	  node. 
	  All methods that add a node now get passed a callable as well.
	  Remove whatShouldBeStarted entirely.
	  On _setState(True), call appropriate down-graph callables, if we
	  can.
	  All actions needed by the depgraph are now directly driven from the
	  depgraph code.
	* flumotion/manager/component.py:
	  Remove tryWhatCanBeStarted. Split the individual things out into
	  separate methods. These are used as callables in the depgraph now.
	* flumotion/manager/manager.py:
	  Changes for depgraph API additions.

	  Fixes #691.

2007-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>
